# perseus-citation-model

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
cit_data/: document_mappings.json
configs/extraction/: baseline.yaml
final-model-20251230_072432/: added_tokens.json  all_results.json  config.json  eval_results.json  special_tokens_map.json  test_results.json  tokenizer_config.json  train_results.json  trainer_state.json
notebooks/: cit_tagging_end_to_end.ipynb  extraction_inference.ipynb
notebooks/xml_attr_stripped/: campbell-sophlanguage-2.xml  viaf2603144.viaf001.perseus-eng1.xml
notebooks/xml_cit_stripped/: campbell-sophlanguage-2.xml  tmp06uvss0n.tmp  tmp3z3ntui0.tmp  tmpev2otpb_.tmp  tmpmwuke27p.tmp  tmpngkd1pap.tmp  tmpo2dcx_y_.tmp  viaf2603144.viaf001.perseus-eng1.xml
notebooks/xml_cit_stripped/processed/: campbell-sophlanguage-2.xml  viaf2603144.viaf001.perseus-eng1.xml
scripts/: check_data_leakage.py  cleanup.sh  compress_all.sh  compress_data.sh  compress_model.sh  cp_xml_with_cits.py  evaluate_extraction.py  setup.sh  test_data_loader.py  train_extraction.py  train_extraction_phase1.py  train_extraction_phase2.py  uncompress.sh
src/perscit-model/extraction/: __init__.py
src/perscit-model/resolution/parsing/: preprocessing.py
src/perscit-model/shared/: data_loader.py
src/perscit_model/: __init__.py
src/perscit_model/extraction/: __init__.py  data_loader.py  evaluate.py  inference.py  model.py  train.py
src/perscit_model/extraction/data/: __init__.py  loader.py  preprocessing.py  xml_parser.py
src/perscit_model/resolution/: data_loader.py
src/perscit_model/resolution/data/: __init__.py
src/perscit_model/shared/: data_loader.py  training_utils.py  xml_utils.py
src/perscit_model/xml_processing/: tagger.py
src/perseus_citation_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_extraction_loader.py  test_resolution_loader.py  test_shared_data_loader.py  test_xml_parser.py
tests/fixtures/: sample_extraction.jsonl  sample_extraction_20.jsonl  sample_extraction_50.jsonl
tests/integration/: test_citation_tagger_integration.py  test_extraction_model.py  test_large_xml_files.py  test_namespace_handling.py  test_train_integration.py  test_xml_reconstruction.py
tests/unit/: test_evaluate.py  test_extraction_dataset.py  test_extraction_loader.py  test_extraction_pipeline.py  test_inference.py  test_resolution_loader.py  test_shared_data_loader.py  test_train_unit.py  test_xml_processing_tagger.py
