[project]
name = "perscit_model"
version = "0.1.0"
description = "Code to train model for citation extraction (for citations to Greek and Latin authors) from XML files, and a model for resolving citations to Perseus URNs (unique resource names)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "bs4>=0.0.2",
  "datasets>=4.4.1",
  "lxml>=6.0.2",
  "protobuf>=6.33.1",
  "sentencepiece>=0.2.1",
  "tiktoken>=0.12.0",
  "torch>=2.9.1",
  "transformers>=4.57.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.1", "pytest-mock>=3.15.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]  # Default: only run fast unit tests
pythonpath = ["src"]
