[project]
name = "perscit_model"
version = "0.1.0"
description = "Code to train model for citation extraction (for citations to Greek and Latin authors) from XML files, and a model for resolving citations to Perseus URNs (unique resource names)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "accelerate>=1.11.0",
  "bs4>=0.0.2",
  "datasets>=4.4.1",
  "lxml>=6.0.2",
  "lxml-stubs>=0.5.1",
  "protobuf>=6.33.1",
  "sentencepiece>=0.2.1",
  "seqeval>=1.2.2",
  "tiktoken>=0.12.0",
  "torch>=2.9.1",
  "transformers>=4.57.1",
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.1.1",
  "ipykernel>=6.0.0",
  "pytest>=9.0.1",
  "pytest-mock>=3.15.1",
]
all = ["perscit_model[dev]"]

[tool.uv]
# Default to GPU-enabled PyTorch (CUDA 12.1)
# For CPU-only (smaller install), override with: 
# uv sync --extra-index-url https://download.pytorch.org/whl/cpu --index-strategy unsafe-best-match
# NOTE: You must use --index-strategy unsafe-best-match when syncing to allow uv to fetch
# the latest versions of dependencies from PyPI (the PyTorch index has outdated versions)
# Example: uv sync --extra dev --index-strategy unsafe-best-match

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["jupyterlab-vim>=4.1.4"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"] # Default: only run fast unit tests
pythonpath = ["src"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
filterwarnings = [
  "ignore:.*ill-defined.*:seqeval.metrics.v1.UndefinedMetricWarning",
] # Keep an eye out for deadlocks, which would be causes by forking over spawning with multiprocessing
# Clean up temp directories more aggressively (keep only last 3 runs)
tmp_path_retention_count = 3
tmp_path_retention_policy = "failed" # Only keep failed test dirs for debugging
